--- a/styles.css
+++ b/styles.css
@@ -8,20 +8,24 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: rgb(74, 74, 74);
+    background: rgb(82, 103, 82);
+    border: 5px solid rgb(64, 74, 64);
     width: 360px;
-    height: 500px;
+    height: 530px;
     margin: 60px auto;
     border-radius: 50px;
+    box-shadow: 0 10px 2px 8px rgb(48, 59, 48);
 }
 
 .display {
     display: flex;
     width: 70%;
     height: 100px;
-    background: lightgray;
+    background: rgb(227, 236, 227);
+    border: 5px solid rgb(150, 176, 150);
     margin: 30px;
     border-radius: 30px;
+    overflow: hidden;
 }
 
 .buttons {
@@ -53,12 +57,17 @@
     justify-content: center;
     width: 60px;
     height: 60px;
-    background: white;
+    background: rgb(220, 255, 218);
+    border-radius: 5px;
     cursor: pointer;
     pointer-events: all;
+    box-shadow: 3px 4px 1px 1px black;
 }
 .left-side p:hover, .right-side p:hover {
-    background: lightgray;
+    background: rgb(165, 208, 163);
+}
+.right-side p {
+    background: rgb(110, 215, 110);
 }
 
 .display p {
@@ -67,5 +76,8 @@
 }
 
 p {
-    font-size: 30px;
+    font-size: 23px;
+    color: rgb(49, 68, 47);
+    font-weight: bold;
+    font-family: 'Garamond';
 }
